Fix minor bug & Update style.css Removed deadcode from script.js and added text overflow to screen and made the screen bigger

--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@ main {
 
 .screen {
   width: 100%;
-  height: 7.5rem;
+  height: 8.5rem;
   background-color: rgb(153, 182, 173);
   border-radius: 0.3rem;
   margin-bottom: var(--gap);
@@ -42,6 +42,7 @@ main {
 
 .screen span {
   overflow-y: auto;
+  text-overflow: "...";
 }
 
 .screen .secondary {
